test/integration/rstanarm/data/pretty.expected
  $ ../../../../../install/default/bin/stanc --include-paths="." --auto-format --allow-undefined NKX.stan

Syntax error in 'NKX.stan', line 2, column 2 to column 5, parsing error:
   -------------------------------------------------
     1:    // dimensions
     2:    int<lower=0> N;  // number of observations
           ^
     3:    int<lower=0> K;  // number of predictors
     4:    
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="." --auto-format --allow-undefined data_assoc.stan

Syntax error in 'data_assoc.stan', line 3, column 2 to column 5, parsing error:
   -------------------------------------------------
     1:    // prior family: 0 = none, 1 = normal, 2 = student_t, 3 = hs, 4 = hs_plus,
     2:    //   5 = laplace, 6 = lasso
     3:    int<lower=0,upper=6> a_prior_dist;
           ^
     4:  
     5:    //--- dimensions for association structure
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="." --auto-format --allow-undefined data_betareg.stan

Syntax error in 'data_betareg.stan', line 2, column 2 to column 5, parsing error:
   -------------------------------------------------
     1:    // betareg data
     2:    int<lower=0, upper=1> has_intercept_z;  // presence of z intercept
           ^
     3:    int<lower=0> link_phi;                  // link transformation for eta_z (0 => no z in model)
     4:    int<lower=0> z_dim;                     // dimensions of z vars
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="." --auto-format --allow-undefined data_event.stan

Syntax error in 'data_event.stan', line 3, column 2 to column 5, parsing error:
   -------------------------------------------------
     1:    // prior family: 0 = none, 1 = normal, 2 = student_t, 3 = hs, 4 = hs_plus,
     2:    //   5 = laplace, 6 = lasso
     3:    int<lower=0,upper=6> e_prior_dist;
           ^
     4:    int<lower=0,upper=2> e_prior_dist_for_intercept;
     5:  
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="." --auto-format --allow-undefined data_glm.stan

Syntax error in 'data_glm.stan', line 2, column 2 to column 5, parsing error:
   -------------------------------------------------
     1:    // flag indicating whether to draw from the prior
     2:    int<lower=0,upper=1> prior_PD;  // 1 = yes
           ^
     3:    int<lower=0,upper=1> compute_mean_PPD; // 1 = yes
     4:    
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="." --auto-format --allow-undefined data_mvmer.stan

Syntax error in 'data_mvmer.stan', line 2, column 2 to column 5, parsing error:
   -------------------------------------------------
     1:    // population level data
     2:    int<lower=0> yInt1[resp_type[1] == 2 ? yNobs[1] : 0]; // integer responses
           ^
     3:    int<lower=0> yInt2[resp_type[2] == 2 ? yNobs[2] : 0];
     4:    int<lower=0> yInt3[resp_type[3] == 2 ? yNobs[3] : 0];
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="." --auto-format --allow-undefined dimensions_mvmer.stan

Syntax error in 'dimensions_mvmer.stan', line 2, column 2 to column 5, parsing error:
   -------------------------------------------------
     1:    // population level dimensions
     2:    int<lower=1,upper=3> M; // num submodels with data (limit of 3)
           ^
     3:    int<lower=0,upper=1> has_aux[3]; // has auxiliary param
     4:    int<lower=0,upper=1> has_weights; // has observation weights
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="." --auto-format --allow-undefined glmer_stuff.stan

Syntax error in 'glmer_stuff.stan', line 3, column 2 to column 5, parsing error:
   -------------------------------------------------
     1:    // glmer stuff, see table 3 of
     2:    // https://cran.r-project.org/web/packages/lme4/vignettes/lmer.pdf
     3:    int<lower=0> t;               // num. terms (maybe 0) with a | in the glmer formula
           ^
     4:    int<lower=1> p[t];            // num. variables on the LHS of each |
     5:    int<lower=1> l[t];            // num. levels for the factor(s) on the RHS of each |
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="." --auto-format --allow-undefined glmer_stuff2.stan

Syntax error in 'glmer_stuff2.stan', line 1, column 2 to column 5, parsing error:
   -------------------------------------------------
     1:    int<lower=0> num_non_zero;  // number of non-zero elements in the Z matrix
           ^
     2:    vector[num_non_zero] w;     // non-zero elements in the implicit Z matrix
     3:    int<lower=0, upper=q-1> v[num_non_zero];               // column indices for w
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="." --auto-format --allow-undefined hyperparameters.stan

Syntax error in 'hyperparameters.stan', line 2, column 2 to column 8, parsing error:
   -------------------------------------------------
     1:    // hyperparameter values are set to 0 if there is no prior
     2:    vector<lower=0>[K] prior_scale;
           ^
     3:    real<lower=0> prior_scale_for_intercept;
     4:    real<lower=0> prior_scale_for_aux;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="." --auto-format --allow-undefined hyperparameters_assoc.stan

Syntax error in 'hyperparameters_assoc.stan', line 2, column 2 to column 8, parsing error:
   -------------------------------------------------
     1:    // hyperparameter values are set to 0 if there is no prior
     2:    vector[a_K]          a_prior_mean;
           ^
     3:    vector<lower=0>[a_K] a_prior_scale;
     4:    vector<lower=0>[a_K] a_prior_df;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="." --auto-format --allow-undefined hyperparameters_event.stan

Syntax error in 'hyperparameters_event.stan', line 2, column 2 to column 8, parsing error:
   -------------------------------------------------
     1:    // hyperparameter values are set to 0 if there is no prior
     2:    vector[e_K]                 e_prior_mean;
           ^
     3:    real                        e_prior_mean_for_intercept;
     4:    vector[basehaz_df]          e_prior_mean_for_aux;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="." --auto-format --allow-undefined hyperparameters_mvmer.stan

Syntax error in 'hyperparameters_mvmer.stan', line 4, column 2 to column 8, parsing error:
   -------------------------------------------------
     2:  
     3:    // coefficients
     4:    vector[yK[1]] y_prior_mean1;
           ^
     5:    vector[yK[2]] y_prior_mean2;
     6:    vector[yK[3]] y_prior_mean3;
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


  $ ../../../../../install/default/bin/stanc --include-paths="." --auto-format --allow-undefined weights_offset.stan

Syntax error in 'weights_offset.stan', line 2, column 2 to column 5, parsing error:
   -------------------------------------------------
     1:    // weights
     2:    int<lower=0,upper=1> has_weights;  // 0 = No, 1 = Yes
           ^
     3:    vector[has_weights ? N : 0] weights;
     4:    
   -------------------------------------------------

Expected "functions {" or "data {" or "transformed data {" or "parameters {" or "transformed parameters {" or "model {" or "generated quantities {".


